--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     }
   ],
   "require": {
-    "ozankurt/google-core": "*"
+    "ozankurt/google-core": "~1.0"
   },
   "autoload": {
     "psr-4": {
